crates/au-cli/tests/it/snapshots/it__scenarios__same-value-collapses-across-surfaces.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 42,
                        "line_col": {
                          "end": {
                            "col": 43,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/same-value-collapses-across-surfaces/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "same-value-collapses-across-surfaces"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "same-value-collapses-across-surfaces"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/same-value-collapses-across-surfaces/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "content": "[:status] made",
            "kind": "inline_code",
            "span": {
              "end": 128,
              "line_col": {
                "end": {
                  "col": 52,
                  "line": 7
                },
                "start": {
                  "col": 36,
                  "line": 7
                }
              },
              "start": 112
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/same-value-collapses-across-surfaces/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "status",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/same-value-collapses-across-surfaces/type/decision.type.yaml",
                "required": false,
                "shape": "[made, superseded]"
              }
            ],
            "required": false,
            "shape": "[made, superseded]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/same-value-collapses-across-surfaces/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 71,
                        "line_col": {
                          "end": {
                            "col": 13,
                            "line": 4
                          },
                          "start": {
                            "col": 9,
                            "line": 4
                          }
                        },
                        "start": 67
                      },
                      "file": "<root>/scenarios/same-value-collapses-across-surfaces/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "made"
                    }
                  },
                  {
                    "location": {
                      "byte_range": {
                        "end": 128,
                        "line_col": {
                          "end": {
                            "col": 52,
                            "line": 7
                          },
                          "start": {
                            "col": 36,
                            "line": 7
                          }
                        },
                        "start": 112
                      },
                      "file": "<root>/scenarios/same-value-collapses-across-surfaces/decision.md"
                    },
                    "section_path": [],
                    "surface": "body_inline_code",
                    "value": {
                      "kind": "scalar",
                      "value": "made"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "made"
                }
              }
            ],
            "field": "status"
          }
        ],
        "file": "<root>/scenarios/same-value-collapses-across-surfaces/decision.md",
        "section_presence": null
      }
    ]
  }
}
