crates/au-cli/tests/it/snapshots/it__scenarios__sealed-family.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 19,
                        "line_col": {
                          "end": {
                            "col": 20,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/sealed-family/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "sealed-family"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "sealed-family"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/sealed-family/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 133,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 101
            },
            "text": "A source with an external URL"
          },
          {
            "content": "source",
            "kind": "inline_code",
            "span": {
              "end": 157,
              "line_col": {
                "end": {
                  "col": 24,
                  "line": 9
                },
                "start": {
                  "col": 16,
                  "line": 9
                }
              },
              "start": 149
            }
          },
          {
            "content": "source.url",
            "kind": "inline_code",
            "span": {
              "end": 182,
              "line_col": {
                "end": {
                  "col": 49,
                  "line": 9
                },
                "start": {
                  "col": 37,
                  "line": 9
                }
              },
              "start": 170
            }
          },
          {
            "content": "source.path",
            "kind": "inline_code",
            "span": {
              "end": 200,
              "line_col": {
                "end": {
                  "col": 67,
                  "line": 9
                },
                "start": {
                  "col": 54,
                  "line": 9
                }
              },
              "start": 187
            }
          }
        ],
        "claim": [
          "source.url"
        ],
        "closure": [
          "source",
          "source.url"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "external_url",
            "origins": [
              {
                "name": "source.url",
                "origin_path": "<root>/scenarios/sealed-family/type/source.url.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "title",
            "origins": [
              {
                "name": "source",
                "origin_path": "<root>/scenarios/sealed-family/type/source.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 95,
                        "line_col": {
                          "end": {
                            "col": 44,
                            "line": 4
                          },
                          "start": {
                            "col": 15,
                            "line": 4
                          }
                        },
                        "start": 66
                      },
                      "file": "<root>/scenarios/sealed-family/web-source.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "https://example.com/article"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "https://example.com/article"
                }
              }
            ],
            "field": "external_url"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 51,
                        "line_col": {
                          "end": {
                            "col": 31,
                            "line": 3
                          },
                          "start": {
                            "col": 8,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/sealed-family/web-source.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Some external article"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Some external article"
                }
              }
            ],
            "field": "title"
          }
        ],
        "file": "<root>/scenarios/sealed-family/web-source.md",
        "section_presence": null
      }
    ]
  }
}
